<resources>
    <string name="app_name">CreateTaskFragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in">ДОБАВИТЬ</string>
    <string name="input">ВВОД</string>
    <string name="boards">Главная</string>
    <string name="calendar">Календарь</string>
    <string name="settings">Настройки</string>
    <string name="title">Озаглавие</string>
    <string name="setDate">ВЫБРАТЬ ДАТУ</string>
    <string name="skip">Пропустить</string>
    <string name="back">Назад</string>
    <string name="next">Следующий</string>
    <string name="language">ЯЗЫК</string>
    <string name="languageEN">англ</string>
    <string name="title1">УПРАВЛЯЙ СВОЕЙ ЗАДАЧЕЙ</string>
    <string name="title1_1">Организуйте все свои дела в списках и календаре</string>
    <string name="title2">Раскрасьте их, чтобы установить приоритеты и категории.</string>
    <string name="title3">Установить уведомление о задачах</string>
    <string name="sms">SMS код</string>
    <string name="number">Номер</string>
    <string name="confirm">Потвердить</string>
    <string name="recevive">ПОЛУЧИТЬ СМС</string>
</resources>