<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/size16"
    tools:context=".ui.CreateTask.CreateTaskFragment">

    <EditText
        android:id="@+id/ed_create_task_fragment"
        android:layout_marginTop="@dimen/size60"
        android:hint="@string/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_setTime_create_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size16" />

    <TextView
        android:id="@+id/txt_setDate_create_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size16" />

    <ImageView
        android:id="@+id/image_create"
        app:srcCompat="@drawable/ic_baseline_image_24"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/size16"
        android:layout_width="@dimen/size200"
        android:layout_height="@dimen/size200"/>

    <Button
        android:id="@+id/btn_set_date"
        android:layout_gravity="center_horizontal"
        android:text="@string/setDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_create_task_fragment"
        android:text="@string/in"
        android:layout_marginTop="@dimen/size16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>