<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.PhoneAuthActivity">
    <ImageView
        android:id="@+id/image_Rhone_Activity"
        android:src="@drawable/ic_baseline_image_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/size25"
        android:layout_width="@dimen/size250"
        android:layout_height="@dimen/size250"/>

    <EditText
        android:id="@+id/et_code"
        app:layout_constraintTop_toBottomOf="@id/image_Rhone_Activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/size60"
        android:hint="@string/sms"
        android:background="@color/white1"
        android:layout_marginHorizontal="@dimen/size25"
        android:textColor="@color/black"
        android:textSize="@dimen/s16"
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <EditText
        android:id="@+id/et_number"
        app:layout_constraintTop_toBottomOf="@id/et_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/size60"
        android:hint="@string/number"
        android:background="@color/white1"
        android:layout_marginHorizontal="@dimen/size25"
        android:textColor="@color/black"
        android:textSize="@dimen/s16"
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <Button
        android:id="@+id/btn_activity_phone_number"
        app:layout_constraintTop_toBottomOf="@id/et_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/size60"
        android:hint="@string/recevive"
        android:textColorHint="@color/grey"
        android:layout_marginHorizontal="@dimen/size25"
        android:textColor="@color/black"
        android:textSize="@dimen/s16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_activity"
        app:layout_constraintTop_toBottomOf="@id/btn_activity_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/size25"
        android:hint="@string/confirm"
        android:layout_marginHorizontal="@dimen/size25"
        android:textColor="@color/black"
        android:textSize="@dimen/s16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>