<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.boarding.BoardActivity">

    <Button
        android:id="@+id/btn_skipp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/size16"
        android:textSize="14sp"
        android:text="@string/skip"
        android:background="@drawable/oval2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager_board"
            android:layout_marginTop="@dimen/size16"
            app:layout_constraintTop_toBottomOf="@id/btn_skipp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/RL"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
    <RelativeLayout
        android:id="@+id/RL"
        android:background="@drawable/ic_wave__6_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/image_arrow"
            android:layout_width="@dimen/size60"
            android:layout_height="@dimen/size60"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/size20"
            android:background="@drawable/oval2"
            android:src="@drawable/ic_baseline_arrow_forward_24" />

                <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                    android:id="@+id/worm_dots_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/image_arrow"
                    android:layout_marginTop="@dimen/size40"
                    app:dotsColor="@color/white"
                    app:dotsStrokeColor="@color/white1"
                    app:dotsCornerRadius="@dimen/size8"
                    app:dotsSize="@dimen/size16"
                    app:dotsSpacing="@dimen/size4"
                    app:dotsStrokeWidth="@dimen/size2"
                    />
                <TextView
                    android:id="@+id/txt_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size25"
                    android:text="@string/back"
                    android:layout_below="@id/worm_dots_indicator"
                    android:textSize="@dimen/size16"
                    tools:ignore="SpUsage" />


        <TextView
                        android:id="@+id/txt_next"
                        android:text="@string/next"
                        android:layout_below="@id/worm_dots_indicator"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="@dimen/size25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>